# TopSystemsInterview

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md
src/: main.cpp
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
